- The obj output directory now does not get created in the wrong 'current directory' in rare cases.
- Dependency checking and compile delays are now saved, and on a per-compiler basis.
- Restyled the editor tooltip balloon.
- The function tooltip balloon now updates on the fly.
- The editor hints option now properly disables hints.

Version 5.0.0.4 - 25 September 2011

- Upgraded the compiler to GCC 4.6.1.
- The main tab control now has the optional (check Environment options) ability to spread tabs over multiple lines.
- Added Goto Declaration and Goto Definition buttonsto the editor right click menu. This buttons make code navigation much easier.
- The old code for Ctrl+Click now uses the new code for the buttons and uses two-way navigation.
- Added Profiling tot the Compiler toolbar.
- Removed the useless About/Help toolbar.
- The splash screen now shows what Dev is currently loading.
- Code Completion Cache can now also be browsed through.
- Added icons for profiling buttons and added them to the compiling toolbar.
- Updated the incremental Search window: it now has a previous and next button.
- Corrected a few regression bugs in the class scanner.
- Fixed a bug in the tooltip content generator.
- And much more minor stuff...

Version 5.0.0.3 - 8 September 2011

- Rewritten and reorganized the Profile Analysis code.
- Added an option to delete Profiling Information which detects by itself if it can be executed.
- Corrected a few errors in the GCC profiling flag generation code.
- Doubled the stack limits.
- Improved Tab handling.
- Fixed a memory leak in the Compiling form.
- Restyled the Configure Tools window.
- Remade the Help File. It now uses HTML Help (.chm) instead of WinHelp, which was removed from Vista and newer Windows OS's.
- Help File couplings now directly take you to the help content of the currently open window.
- Added optional automatic brace closing to the Editor Options.
- Added an options tab to the Profiler.